	decl_type and net_type accessors.

***	Added Verilog::Netlist::Interface and related accessors.

***	Added Netlist::Module->keyword accessor, and use it for "program"s.

****	Fix Macintosh BSD build error.  [Otacilio de Arujo Ramos Neto]

****	Fix parallel make rule build error.  [Chitlesh Goorah]

****	Fix const compile warning in VPreproc.cpp. [Chitlesh Goorah]

* Verilog::Language 3.121 2009/4/5

****	Make cell names unique when duplicate cells encountered. [Paul Janson]

****	Remove unused parameter in exit_if_error.  [Paul Janson]

****	Fix modported instance name passed to SigParser::instant callback.

* Verilog::Language 3.120 2009/2/25

***	Add vhier --resolve-files option. [by Vasu Arasanipalai]

***     Support "parameter integer" etc, bug64. [Jeff Kurtze]

***	Support big-endian bit vectors, i.e. [0:2], bug65. [Devendra Singh]

***	Return width() of 1 for non-vectored signals, bug65. [Devendra Singh]

***	Add "'{" as an operator.

****	Fix "assign {{x,y},z}", bugrt43138. [Devendra Singh]

****	Fix documentation on ports_ordered, bug66.  [Nicky Ayoub]

****	Fix compile issues with GCC 4.3.  [Donavan Miller]

****	Fix Bison 2.4 compile issues.

* Verilog::Language 3.110 2009/1/28

**	Support interface and import. [by Sandeep Gor]
	Add new SigParser::interface, endinterface and import callbacks.

***	Add vhier --top-module option, bug49.  [John Busco]

***	Add vpassert $ucover_bits_clk. [Mahesh Kumashikar, et al]

***	Add comments to Netlist::Net::verilog_text. [by Jeff Short]

***	Support `pragma and `default_nettype.

* Verilog::Language 3.100 2009/1/2

**	Vppp is now renamed vppreproc; vpm is renamed vpassert.
	This fixes naming conflicts with other packages.  [Chitlesh Goorah]
	Note this breaks backward compatibility and any scripts that call
	these programs will need updating.  Alternatively, add a symlink in
	your bin directory from the old name.

***	Fix missing module dependencies and Bison warning.  [Chitlesh Goorah]
