@@ -481,3 +481,8 @@ verilog/parser_sv.v:192: MODULE  'module' 'prop_parens' undef '0'
 verilog/parser_sv.v:194: ENDMODULE  'endmodule'
 verilog/parser_sv.v:197: TASK  'task' 'ass'
 verilog/parser_sv.v:199: ENDTASKFUNC  'endtask'
+verilog/parser_sv.v:202: MODULE  'module' 'sized_out' undef '0'
+verilog/parser_sv.v:203: VAR  'parameter' 'SZ' 'module' '' '' '' '4'
+verilog/parser_sv.v:204: VAR  'port' 'o_sized' 'module' '' 'logic [SZ-1:0]' '' ''
+verilog/parser_sv.v:204: PORT  'o_sized' 'module' 'output' 'logic [SZ-1:0]' '' '1'
+verilog/parser_sv.v:205: ENDMODULE  'endmodule'
