@@ -7,4 +7,4 @@ Module:v_v2k  Kwd:module  File:verilog/v_v2k.v
   Net:clk  O  DeclT:port  NetT:  DataT:  Array:
   Net:rst  O  DeclT:port  NetT:  DataT:  Array:
   Net:sig1  O  DeclT:port  NetT:  DataT:[WIDTH:0]  Array:  WIDTH:0
-  Net:sig2  I  DeclT:port  NetT:  DataT:reg [WIDTH:0]  Array:
+  Net:sig2  I  DeclT:port  NetT:  DataT:reg [WIDTH:0]  Array:  WIDTH:0
